[package]
name = "rdl"
version = "0.1.0"
authors = ["Steven Waldron <steven.waldron@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_tree_view = "0.6"
cursive_table_view = "0.12"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["termion-backend"]
