[package]
name = "rdl"
version = "0.1.0"
authors = ["Steven Waldron <steven.waldron@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cursive_tree_view = "0.6"
cursive_table_view = "0.12"
serde = "1"
serde_derive = "1"
ron = "0.6"
toml = "0.5"
directories = "3"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["termion-backend"]
